--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.DateChooser.jar=C:\\Users\\Thisarani\\Downloads\\jdatechooser\\DateChooser.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\Thisarani\\Downloads\\jcalendar-1.4.jar
+file.reference.rs2xml.jar=C:\\Users\\Thisarani\\Desktop\\rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -37,7 +38,8 @@ javac.classpath=\
     ${libs.eclipselink.classpath}:\
     ${libs.beans-binding.classpath}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.DateChooser.jar}
+    ${file.reference.DateChooser.jar}:\
+    ${file.reference.rs2xml.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
